2017-09-04  Simon Pfreundschuh  <simon.pfreundschuh@chalmers.se>

	Some smaller fixes for interactive python interface.

	* typhon/arts/workspace/agendas.py:
	- Decode error byte string returned by execute_controlfile to properly display
	ARTS error messages.

	* typhon/arts/workspace/methods.py:
	- Raise value error when group of generic input doesn't match the expected one.

	* typhon/arts/workspace/variables.py:
	- Update array interface when calling value on a WSV

2017-09-04  Lukas Kluft  <lukas.kluft@gmail.com>

	Added a function to plot a colorized series of bars.

	* typhon/plots/plots.py (colored_bars):

	Function to plot a colorized bar plot.

	* doc/typhon.plots.rst:

	Added `colored_bars` to documentation.

2017-08-30  Oliver Lemke  <olemke@core-dump.info>

	* typhon/version.py: Set DEVBUILD back to True after release.

2017-08-30  Oliver Lemke  <olemke@core-dump.info>

	* typhon/version.py: 0.4.0 Release.

	* doc/typhon.arts.workspace.rst:

	Reorder modules alphabetically and list their classes so they appear
	in the sphinx documentation.

	* typhon/arts/workspace/__init__.py, typhon/arts/workspace/agendas.py,
	typhon/arts/workspace/api.py, typhon/arts/workspace/methods.py,
	typhon/arts/workspace/workspace.py:

	Small changes to docs for better sphinx formatting.

2017-08-29  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/datasets/tovs.py(HIRS._read):

	- Fix KeyError in error message formatting

2017-08-28  Oliver Lemke  <olemke@core-dump.info>

	* typhon/datasets/_tovs_defs.py, typhon/datasets/filters.py,
	typhon/datasets/tovs.py:

	Replace formatted strings (breaks python 3.5 compatibility) with
	traditional format strings.
	
2017-08-27  Lukas Kluft  <lukas.kluft@gmail.com>

	* doc/pyplots/plot_density.py,
	  doc/pyplots/plot_difference.py,
	  doc/pyplots/plot_phase.py,
	  doc/pyplots/plot_speed.py,
	  doc/pyplots/plot_temperature.py,
	  doc/pyplots/plot_velocity.py,
	  doc/pyplots/stylesheet_gallery.py:
